# cyre-rust

./: .prettierrc  Cargo.toml  README.md  cyre-pipeline.md
examples/: advanced_demo.rs  array_pipeline_integration_test.rs  comprehensive_demo.rs  comprehensive_timing_tests.rs  cyre-benchmark.rs  cyre-server.rs  debounce_test.rs  debounce_throttle_test.rs  enhanced_state_demo.rs  full_color_sensor_demo.rs  iot-architecture-demo.rs  iot-client-simulator.rs  iot_mock_data_generator.rs  iot_smart_home_server.rs  modular_performance_test.rs  optimized-cyre-benchmark.rs  orchestration_demo.rs  pipeline_demo.rs  pipeline_internals.rs  pipeline_operators_demo.rs  quick_start.rs  realistic_performance_test.rs  realistic_performance_test_fixed.rs  repeat_interval_test.rs  rust-cyre-benchmark.rs  rust_comeback_test.rs  schedule_test.rs  simple_iot_demo.rs  simple_sensor_demo.rs  simple_usage.rs  smart-home-server.rs  smart_home_demo.rs  smart_security_demo.rs  task_store_demo.rs  throttle_test.rs  time.rs  timekeeper_demo.rs  timekeeper_quick_demo.rs  trading_bot_demo.rs  transform.rs  (+3 more)
src/: app.rs  lib.rs  main.rs  server.rs  utils.rs
src/branch/: mod.rs
src/breathing/: mod.rs
src/channel/: channel.rs  mod.rs
src/config/: mod.rs
src/context/: metrics_state.rs  mod.rs  sensor.rs  state.rs  task_store.rs
src/core/: cyre.rs  mod.rs
src/orchestration/: mod.rs  orchestration.rs
src/pipeline/: mod.rs  operators.rs
src/protection/: mod.rs  state.rs
src/schema/: compile_execute.rs  compiler.rs  data_definitions.rs  executor.rs  mod.rs  operators.rs
src/talent/: functions.rs  mod.rs  registry.rs  types.rs
src/task/: simple_task.rs
src/timekeeper/: mod.rs  timekeeper.rs
src/timeline/: mod.rs
src/types/: core.rs  io.rs  mod.rs  priority.rs  task.rs
tests/: channel_operators_test.rs  integration_test.rs  timekeeper_test.rs  timing_tests.rs
