[package]
name = "cyre"
version = "0.2.1"
edition = "2024"
authors = ["Cyre Team"]
description = "High-performance reactive event manager - Rust implementation of Cyre"
license = "MIT"
repository = "https://github.com/neuralline/cyre-rust"
keywords = ["reactive", "events", "performance", "async", "state-management"]
categories = ["asynchronous", "web-programming", "data-structures"]

[lib]
name = "cyre_rust"
path = "src/lib.rs"

# PERFORMANCE-OPTIMIZED DEPENDENCIES
[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization (optimized)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

# HIGH-PERFORMANCE DATA STRUCTURES (FIX for RwLock issues)
dashmap = "6.1"           # Lock-free concurrent HashMap
smallvec = "1.13"         # Stack-allocated vectors
ahash = "0.8"             # Faster hashing algorithm

# PERFORMANCE UTILITIES
likely_stable = "0.1"     # Branch prediction hints
parking_lot = "0.12"      # Faster mutexes (when locks are needed)

# Original dependencies
rand = "0.9.1"
axum = "0.8.4"
tower-http = "0.6.6"
uuid = "1.17.0"

[dev-dependencies]
criterion = "0.6"         # Benchmarking
tokio-test = "0.4"        # Async testing utilities

[features]
default = ["fast"]
fast = []                 # Enable all performance optimizations
benchmarks = []
server = []

# AGGRESSIVE OPTIMIZATION SETTINGS (Enhanced)
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"               # Aggressive link-time optimization (was "thin")
codegen-units = 1          # Better optimization at cost of compile time
panic = "abort"            # Smaller binaries, faster execution
overflow-checks = false    # Disable integer overflow checks in release
debug = false             # No debug info in release
rpath = false             # Disable rpath
debug-assertions = false  # Disable debug assertions

# ULTRA-FAST DEVELOPMENT BUILDS
[profile.dev]
opt-level = 1              # Some optimization for development
debug = true
overflow-checks = true
incremental = true         # Faster recompilation
debug-assertions = true

# BENCHMARK PROFILE FOR ACCURATE PERFORMANCE TESTING
[profile.bench]
inherits = "release"
debug = true               # Keep debug info for profiling
lto = "fat"                # Aggressive link-time optimization

# FAST TEST PROFILE
[profile.test]
opt-level = 1              # Optimize tests for speed
debug = true
overflow-checks = true

# Binary definitions
[[bin]]
name = "cyre_rust"
path = "src/main.rs"

# PERFORMANCE TEST EXAMPLES
[[example]]
name = "bench"
path = "examples/cyre-benchmark.rs"